--- a/guosen/index.html
+++ b/guosen/index.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     <header><b>Gradio Demo</b></header>
-    <iframe src="https://yourname-yourspace.hf.space"></iframe>
+    <iframe src="https://allenmeng-aiseries1.hf.space"></iframe>
   </body>
 </html>
