--- a/guosen/index.html
+++ b/guosen/index.html
@@ -11,7 +11,7 @@
     </style>
   </head>
   <body>
-    <header><b>Gradio Demo</b></header>
+    <header><b>国信AI赋能赋能投研工作团队-主动 </b></header>
     <iframe src="https://allenmeng-aiseries1.hf.space"></iframe>
   </body>
 </html>
