Update page title in index.html

--- a/guosen/index.html
+++ b/guosen/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>我的 Gradio 小工具</title>
+    <title>国信AI赋能赋能投研-主动</title>
     <style>
       body { margin: 0; font-family: system-ui, -apple-system, "Segoe UI", Arial; }
       header { padding: 16px 20px; border-bottom: 1px solid #eee; }
