--- a/guosen/index.html
+++ b/guosen/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>国信证券AI赋能赋能投研-主动</title>
+    <title>国信证券AI赋能投研-主动</title>
     <style>
       body { margin: 0; font-family: system-ui, -apple-system, "Segoe UI", Arial; }
       header { padding: 16px 20px; border-bottom: 1px solid #eee; }
@@ -11,7 +11,7 @@
     </style>
   </head>
   <body>
-    <header><b>国信证券AI赋能赋能投研工作团队：主动框架 </b></header>
+    <header><b>国信证券AI赋能投研工作团队：主动框架 </b></header>
     <iframe src="https://allenmeng-aiseries1.hf.space"></iframe>
   </body>
 </html>
